# elk-tinker-lab

./: .gitignore  CLAUDE.md  README.md  ideas.md  inventory.md
.claude/commands/: deploy.md  new-project.md
.claude/rules/: project-conventions.md
adr/: README.md
components/: README.md
components/audio/: README.md  pam8403-amplifier.md  usb-audio-dac.md
components/cameras/: README.md
components/displays/: README.md  velleman-vmp400-tft.md  velleman-vmp400.md  waveshare-35-hdmi.md
components/networking/: README.md
components/sensors/: README.md
docs/: README.md  gpio-numbering.md  headless-pi-setup.md  pi-power-budgeting.md  spi-vs-i2c.md
projects/: README.md
projects/_template/: DECISIONS.md  HARDWARE.md  README.md  SOFTWARE.md
projects/_template/adr/: README.md
projects/_template/scripts/: deploy.sh  setup.sh
projects/antique-telephone-ai-operator/: HARDWARE.md  README.md
projects/antique-telephone-ai-operator/adr/: 001-ring-generator-architecture.md
projects/hey-lantern/: DECISIONS.md  HARDWARE.md  README.md  SOFTWARE.md
projects/hey-lantern/software/: .env.example  pyproject.toml
projects/hey-lantern/software/src/: config.py  llm.py  main.py  stt.py  tts.py  wake_word.py
projects/mini-crt-arcade/: DECISIONS.md  ENCLOSURE.md  HARDWARE.md  README.md  SOFTWARE.md
scripts/: README.md  scan-network.sh
software/: README.md
software/raspberry-pi-os/: README.md  headless-setup.md  ssh-configuration.md  trixie-xrdp-setup.md  wifi-nmcli.md
software/retropie/: README.md  audio-configuration.md  display-configuration.md
(+23 files in other folders)
